--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b5064bde",
+   "id": "363f5b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab286b94",
+   "id": "4fdfbf65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c274376",
+   "id": "f3305f17",
    "metadata": {},
    "outputs": [
     {
@@ -139,11 +139,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8d57e5b0",
+   "execution_count": 5,
+   "id": "9a70398a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e3a610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = [0,1,2,3]\n",
+    "position = [0,100,200,300]\n",
+    "\n",
+    "plt.plot(time, position)\n",
+    "plt.xlabel(\"time (hr)\")\n",
+    "plt.ylabel(\"pos\")"
+   ]
   }
  ],
  "metadata": {
