--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3164e1c7",
+   "id": "da0e41b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5c7a69f5",
+   "id": "eaa0e400",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8da96059",
+   "id": "602f6ccf",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3f163a09",
+   "id": "8f897142",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1b95cd75",
+   "id": "4d49c1ad",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7bd35abf",
+   "id": "d2ae0abe",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b3aae1a6",
+   "id": "dfd22e62",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ba051660",
+   "id": "dba8f5f8",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
     }
    ],
    "source": [
-    "#plt.style.use(\"ggplot\")\n",
+    "plt.style.use(\"ggplot\")\n",
     "data.T.plot(kind=\"bar\")\n",
     "plt.ylabel(\"GDP per capita\")"
    ]
@@ -511,10 +511,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb24e62",
+   "id": "73c7ce54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "years = data.columns\n",
+    "gdp_australia = data.loc[\"Australia\"]\n",
+    "\n",
+    "plt.plot"
+   ]
   }
  ],
  "metadata": {
