--- a/For_Loops.ipynb
+++ b/For_Loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6ec04622",
+   "id": "93bce448",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8e6b06e9",
+   "id": "3047d3fb",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5d997529",
+   "id": "c01100b4",
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +71,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "42a4f532",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for number in range(1, 10):\n",
+    "    total = total + number\n",
+    "    \n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7f0f8ddf",
+   "id": "79553b04",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for number in range(1, 10):\n",
-    "    total"
-   ]
+   "source": []
   }
  ],
  "metadata": {
