--- a/For_Loops.ipynb
+++ b/For_Loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "93bce448",
+   "id": "4a2a3903",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3047d3fb",
+   "id": "a4493e56",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c01100b4",
+   "id": "d5b5924c",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "42a4f532",
+   "id": "77929f7a",
    "metadata": {},
    "outputs": [
     {
@@ -94,10 +94,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79553b04",
+   "id": "b8bc6902",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "total = 0\n",
+    "for word in [\"red\", \"green\", \"blue\"]:\n",
+    "    ____ = ____ + len(word)\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8586e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of word lengths: [\"red\", \"green\", \"blue\"] => [3, 5, 4]\n",
+    "lengths = ____\n",
+    "for word in [\"red\", \"green\", \"blue\"]:\n",
+    "    lengths.____(____)\n",
+    "print(lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fd776a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate all words: [\"red\", \"green\", \"blue\"] => \"redgreenblue\"\n",
+    "words = [\"red\", \"green\", \"blue\"]\n",
+    "result = ____\n",
+    "for ____ in ____:\n",
+    "    ____\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
