--- a/For_Loops.ipynb
+++ b/For_Loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4a2a3903",
+   "id": "36e3d890",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a4493e56",
+   "id": "33fd0ec9",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d5b5924c",
+   "id": "a91e5919",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "77929f7a",
+   "id": "13dcd0c1",
    "metadata": {},
    "outputs": [
     {
@@ -94,20 +94,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8bc6902",
+   "id": "c33cff94",
    "metadata": {},
    "outputs": [],
    "source": [
     "total = 0\n",
     "for word in [\"red\", \"green\", \"blue\"]:\n",
-    "    ____ = ____ + len(word)\n",
+    "    total = tot + len(word)\n",
     "print(total)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8586e3c",
+   "id": "08c9620f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd776a3",
+   "id": "4dd60e91",
    "metadata": {},
    "outputs": [],
    "source": [
