--- a/For_Loops.ipynb
+++ b/For_Loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "36e3d890",
+   "id": "c6580678",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "33fd0ec9",
+   "id": "f360a91d",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a91e5919",
+   "id": "9484d37f",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "13dcd0c1",
+   "id": "eb770bfb",
    "metadata": {},
    "outputs": [
     {
@@ -93,35 +93,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c33cff94",
+   "execution_count": 15,
+   "id": "2ff6c191",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "total = 0\n",
     "for word in [\"red\", \"green\", \"blue\"]:\n",
-    "    total = tot + len(word)\n",
+    "    total = total + len(word)\n",
     "print(total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "08c9620f",
+   "execution_count": 16,
+   "id": "2a0b3527",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 5, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "# List of word lengths: [\"red\", \"green\", \"blue\"] => [3, 5, 4]\n",
-    "lengths = ____\n",
+    "lengths = []\n",
     "for word in [\"red\", \"green\", \"blue\"]:\n",
-    "    lengths.____(____)\n",
+    "    lengths.append(len(word))\n",
     "print(lengths)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd60e91",
+   "id": "974da2b7",
    "metadata": {},
    "outputs": [],
    "source": [
