--- a/For_Loops.ipynb
+++ b/For_Loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c6580678",
+   "id": "bda8abf0",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f360a91d",
+   "id": "42525636",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9484d37f",
+   "id": "37536400",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eb770bfb",
+   "id": "b8f918b8",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2ff6c191",
+   "id": "7b86c91e",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2a0b3527",
+   "id": "8798ec09",
    "metadata": {},
    "outputs": [
     {
@@ -137,15 +137,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974da2b7",
+   "id": "801cdd9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Concatenate all words: [\"red\", \"green\", \"blue\"] => \"redgreenblue\"\n",
     "words = [\"red\", \"green\", \"blue\"]\n",
-    "result = ____\n",
-    "for ____ in ____:\n",
-    "    ____\n",
+    "result = \"\"\n",
+    "for word in words:\n",
+    "    result = result + word\n",
     "print(result)"
    ]
   }
