--- a/For_Loops.ipynb
+++ b/For_Loops.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bda8abf0",
+   "id": "a504b58e",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42525636",
+   "id": "51314a1a",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "37536400",
+   "id": "85bd796f",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b8f918b8",
+   "id": "f6f3daa5",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7b86c91e",
+   "id": "dd6253b8",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8798ec09",
+   "id": "59715d00",
    "metadata": {},
    "outputs": [
     {
@@ -136,10 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "801cdd9a",
+   "execution_count": 17,
+   "id": "deca4b18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "redgreenblue\n"
+     ]
+    }
+   ],
    "source": [
     "# Concatenate all words: [\"red\", \"green\", \"blue\"] => \"redgreenblue\"\n",
     "words = [\"red\", \"green\", \"blue\"]\n",
@@ -148,6 +156,14 @@
     "    result = result + word\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "513e4f17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
