--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -2,16 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19cd5c74",
+   "execution_count": 1,
+   "id": "16f26332",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.54 is large\n"
+     ]
+    }
+   ],
    "source": [
     "mass = 3.54\n",
     "if mass > 3.0:\n",
     "    print(mass, \"is large\")\n",
     "    \n",
-    "mass = 2"
+    "mass = 2.07\n",
+    "if mass > 3.0:\n",
+    "    print(mass, \"is large\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68a7c6ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
+    "\n",
+    "for mass in masse"
    ]
   }
  ],
