--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "16f26332",
+   "id": "b4040d1f",
    "metadata": {},
    "outputs": [
     {
@@ -26,14 +26,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "6c5c7acf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.54 is large\n",
+      "9.22 is large\n"
+     ]
+    }
+   ],
+   "source": [
+    "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
+    "\n",
+    "for mass in masses:\n",
+    "    if mass > 3.0:\n",
+    "        print(mass, \"is large\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "68a7c6ba",
+   "id": "1e565f8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
     "\n",
-    "for mass in masse"
+    "for mass in masses:\n",
+    "    if mass > 3.0:\n",
+    "        print(mass, \"is large\")\n",
+    "    else    \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
    ]
   }
  ],
