--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b4040d1f",
+   "id": "caa2c3a0",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6c5c7acf",
+   "id": "f6ed346a",
    "metadata": {},
    "outputs": [
     {
@@ -50,23 +50,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e565f8e",
+   "execution_count": 3,
+   "id": "bdb16d43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.54 is large\n",
+      "2.07 is small\n",
+      "9.22 is large\n",
+      "1.86 is small\n",
+      "1.71 is small\n"
+     ]
+    }
+   ],
    "source": [
     "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
     "\n",
     "for mass in masses:\n",
     "    if mass > 3.0:\n",
     "        print(mass, \"is large\")\n",
-    "    else    \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "    else:\n",
+    "        print(mass, \"is small\")\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64241f9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
