--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "caa2c3a0",
+   "id": "9f682554",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f6ed346a",
+   "id": "c7241ace",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bdb16d43",
+   "id": "4165d333",
    "metadata": {},
    "outputs": [
     {
@@ -79,11 +79,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "62d5a54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.54 is large\n",
+      "2.07 is small\n",
+      "9.22 is huge\n",
+      "1.86 is small\n",
+      "1.71 is small\n"
+     ]
+    }
+   ],
+   "source": [
+    "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
+    "\n",
+    "for mass in masses:\n",
+    "    if mass > 9.0:\n",
+    "        print(mass, \"is huge\")\n",
+    "    elif mass > 3.0:\n",
+    "        print(mass, \"is large\")\n",
+    "    else:\n",
+    "        print(mass, \"is small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "64241f9b",
+   "id": "3647323b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
+    "\n",
+    "for mass in masses:\n",
+    "    if mass > 9.0:\n",
+    "        print(mass, \"is huge\")\n",
+    "    elif mass > 3.0:\n",
+    "        print(mass, \"is large\")\n",
+    "    else:\n",
+    "        print(mass, \"is small\")"
+   ]
   }
  ],
  "metadata": {
