--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f682554",
+   "id": "0fc09521",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c7241ace",
+   "id": "453864ca",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4165d333",
+   "id": "784b96c6",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62d5a54d",
+   "id": "3e72b34d",
    "metadata": {},
    "outputs": [
     {
@@ -109,23 +109,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3647323b",
+   "execution_count": 5,
+   "id": "9dae91e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.54 is large\n",
+      "2.07 is small\n",
+      "9.22 is large\n",
+      "1.86 is small\n",
+      "1.71 is small\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "## wrong order!\n",
     "\n",
     "masses = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
     "\n",
     "for mass in masses:\n",
-    "    if mass > 9.0:\n",
-    "        print(mass, \"is huge\")\n",
-    "    elif mass > 3.0:\n",
+    "    if mass > 3.0:\n",
     "        print(mass, \"is large\")\n",
+    "    elif mass > 9.0:\n",
+    "        print(mass, \"is huge\")\n",
     "    else:\n",
     "        print(mass, \"is small\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71494ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
