--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0fc09521",
+   "id": "bc069a11",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "453864ca",
+   "id": "66731d7e",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "784b96c6",
+   "id": "5a133d8a",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e72b34d",
+   "id": "1844ab32",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9dae91e0",
+   "id": "f3e57b33",
    "metadata": {},
    "outputs": [
     {
@@ -142,10 +142,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71494ca0",
+   "id": "1d9d54c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "velocity = 10.0\n",
+    "\n",
+    "if velocity > 20.0:\n",
+    "    print(\"moving too fast\")\n",
+    "else:\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
