--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc069a11",
+   "id": "c0b655f9",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "66731d7e",
+   "id": "10fcb1b6",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a133d8a",
+   "id": "1bc91b39",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1844ab32",
+   "id": "3b92fc77",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f3e57b33",
+   "id": "8df4cc24",
    "metadata": {},
    "outputs": [
     {
@@ -141,17 +141,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d9d54c1",
+   "execution_count": 6,
+   "id": "b0e66306",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adjusting velocity\n"
+     ]
+    }
+   ],
    "source": [
     "velocity = 10.0\n",
     "\n",
     "if velocity > 20.0:\n",
     "    print(\"moving too fast\")\n",
     "else:\n",
-    "    print()"
+    "    print(\"adjusting velocity\")\n",
+    "    velocity = 50.0\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a2d767e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "velocity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "336b05fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velocity = 10\n",
+    "for i in range(5)"
    ]
   }
  ],
