--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c0b655f9",
+   "id": "a7d47e00",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "10fcb1b6",
+   "id": "4a8df23b",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1bc91b39",
+   "id": "c0b8f1eb",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b92fc77",
+   "id": "403fde28",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8df4cc24",
+   "id": "00da0009",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b0e66306",
+   "id": "1c380c86",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a2d767e3",
+   "id": "e6a617f7",
    "metadata": {},
    "outputs": [
     {
@@ -188,12 +188,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336b05fc",
+   "id": "2973c6e9",
    "metadata": {},
    "outputs": [],
    "source": [
     "velocity = 10\n",
-    "for i in range(5)"
+    "for i in range(5):\n",
+    "    print(i, \":\", velocity)\n",
+    "    if velocity >20:\n",
+    "        print(\"moving too fast\")\n",
+    "        velocity = vol"
    ]
   }
  ],
