--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7d47e00",
+   "id": "5f6b5cd0",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4a8df23b",
+   "id": "7d30d49e",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c0b8f1eb",
+   "id": "e8e1bbfe",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "403fde28",
+   "id": "ddcad6f7",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "00da0009",
+   "id": "6600c343",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1c380c86",
+   "id": "fe9241fd",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e6a617f7",
+   "id": "4c64582d",
    "metadata": {},
    "outputs": [
     {
@@ -188,16 +188,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2973c6e9",
+   "id": "791d84db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "velocity = 10\n",
+    "velocity = 10.0\n",
     "for i in range(5):\n",
     "    print(i, \":\", velocity)\n",
     "    if velocity >20:\n",
     "        print(\"moving too fast\")\n",
-    "        velocity = vol"
+    "        velocity = velocity - 5.0\n",
+    "    else:\n",
+    "        print(\"moving too slow\")\n",
+    "        velocity = velocity + 10.0\n",
+    "        \n",
+    "print(\"final velocity is:\", velocity)"
    ]
   }
  ],
