--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f6b5cd0",
+   "id": "9c365bb3",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d30d49e",
+   "id": "1ccd4a7b",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e8e1bbfe",
+   "id": "b13f48b5",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ddcad6f7",
+   "id": "b49638cb",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6600c343",
+   "id": "e6feb7f0",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fe9241fd",
+   "id": "0e5f551b",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4c64582d",
+   "id": "16118f2d",
    "metadata": {},
    "outputs": [
     {
@@ -187,10 +187,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "791d84db",
+   "execution_count": 8,
+   "id": "ca428440",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 10.0\n",
+      "moving too slow\n",
+      "1 : 20.0\n",
+      "moving too slow\n",
+      "2 : 30.0\n",
+      "moving too fast\n",
+      "3 : 25.0\n",
+      "moving too fast\n",
+      "4 : 20.0\n",
+      "moving too slow\n",
+      "final velocity is: 30.0\n"
+     ]
+    }
+   ],
    "source": [
     "velocity = 10.0\n",
     "for i in range(5):\n",
@@ -198,12 +216,22 @@
     "    if velocity >20:\n",
     "        print(\"moving too fast\")\n",
     "        velocity = velocity - 5.0\n",
+    "    elif velocity == 25.0:\n",
+    "        \n",
     "    else:\n",
     "        print(\"moving too slow\")\n",
     "        velocity = velocity + 10.0\n",
     "        \n",
     "print(\"final velocity is:\", velocity)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11786a05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
