--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c365bb3",
+   "id": "f827c3c4",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ccd4a7b",
+   "id": "92479f07",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b13f48b5",
+   "id": "234a1a38",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b49638cb",
+   "id": "dd81a2c6",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e6feb7f0",
+   "id": "c60cf7a0",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0e5f551b",
+   "id": "2fd72432",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "16118f2d",
+   "id": "904f5e2c",
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ca428440",
+   "execution_count": 10,
+   "id": "ee331fdf",
    "metadata": {},
    "outputs": [
     {
@@ -202,10 +202,8 @@
       "2 : 30.0\n",
       "moving too fast\n",
       "3 : 25.0\n",
-      "moving too fast\n",
-      "4 : 20.0\n",
-      "moving too slow\n",
-      "final velocity is: 30.0\n"
+      "perfect velocity!\n",
+      "final velocity is: 25.0\n"
      ]
     }
    ],
@@ -213,11 +211,13 @@
     "velocity = 10.0\n",
     "for i in range(5):\n",
     "    print(i, \":\", velocity)\n",
-    "    if velocity >20:\n",
+    "    if velocity == 25.0:\n",
+    "        print(\"perfect velocity!\")\n",
+    "        break\n",
+    "    elif velocity >20:\n",
     "        print(\"moving too fast\")\n",
     "        velocity = velocity - 5.0\n",
-    "    elif velocity == 25.0:\n",
-    "        \n",
+    "\n",
     "    else:\n",
     "        print(\"moving too slow\")\n",
     "        velocity = velocity + 10.0\n",
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11786a05",
+   "id": "04dcf415",
    "metadata": {},
    "outputs": [],
    "source": []
