--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f827c3c4",
+   "id": "884e3289",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "92479f07",
+   "id": "38930f7c",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "234a1a38",
+   "id": "883a809c",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dd81a2c6",
+   "id": "10941f34",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c60cf7a0",
+   "id": "0a2375a1",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2fd72432",
+   "id": "5acf38d2",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "904f5e2c",
+   "id": "234f5f05",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ee331fdf",
+   "id": "be339911",
    "metadata": {},
    "outputs": [
     {
@@ -228,10 +228,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04dcf415",
+   "id": "8847d807",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mass"
+   ]
   }
  ],
  "metadata": {
