--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "884e3289",
+   "id": "9739fdfa",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "38930f7c",
+   "id": "70c38135",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "883a809c",
+   "id": "a3c5ec15",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "10941f34",
+   "id": "69d37095",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a2375a1",
+   "id": "d8e26cfb",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5acf38d2",
+   "id": "ec6647c0",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "234f5f05",
+   "id": "50990083",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "be339911",
+   "id": "739c6724",
    "metadata": {},
    "outputs": [
     {
@@ -228,11 +228,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8847d807",
+   "id": "c06cd978",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass"
+    "mass = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
+    "velocity = [10.0, 20.0, 30.0, 25.0, 20.0]\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "for i in range(5):\n",
+    "    if mass[i] > 5 a"
    ]
   }
  ],
