--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9739fdfa",
+   "id": "37e4f980",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "70c38135",
+   "id": "29b62ce8",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a3c5ec15",
+   "id": "af74d591",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "69d37095",
+   "id": "08fd0f6a",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8e26cfb",
+   "id": "fc9978f6",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ec6647c0",
+   "id": "67bdf34f",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "50990083",
+   "id": "897f0da1",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "739c6724",
+   "id": "45260b51",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c06cd978",
+   "id": "46a9aa44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,10 @@
     "i = 0\n",
     "\n",
     "for i in range(5):\n",
-    "    if mass[i] > 5 a"
+    "    if mass[i] > 5 and velocity > 20:\n",
+    "        print(\"fast heavy object\")\n",
+    "    elif mass[i] > 2 and mass <= 5.0 and velocity <= 20:\n",
+    "        print(\"\")"
    ]
   }
  ],
