--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "37e4f980",
+   "id": "6a690617",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "29b62ce8",
+   "id": "d0645e75",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "af74d591",
+   "id": "5054579a",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "08fd0f6a",
+   "id": "23c3e35f",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fc9978f6",
+   "id": "c30db99b",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "67bdf34f",
+   "id": "da2c74ea",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "897f0da1",
+   "id": "269da4cf",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "45260b51",
+   "id": "f61c4b11",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a9aa44",
+   "id": "ec6c7b5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,11 @@
     "    if mass[i] > 5 and velocity > 20:\n",
     "        print(\"fast heavy object\")\n",
     "    elif mass[i] > 2 and mass <= 5.0 and velocity <= 20:\n",
-    "        print(\"\")"
+    "        print(\"normal traffic\")\n",
+    "    elif elif mass[i] < 2 and velocity <= 20:\n",
+    "        print(\"slow light object, Ignore it\")\n",
+    "    else:\n",
+    "        print(Whoa! Something is up with the data\")"
    ]
   }
  ],
