--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6a690617",
+   "id": "34da4fb9",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d0645e75",
+   "id": "3f1d4d94",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5054579a",
+   "id": "b499e483",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23c3e35f",
+   "id": "5ba6a5f9",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c30db99b",
+   "id": "cb8043a5",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "da2c74ea",
+   "id": "b171822c",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "269da4cf",
+   "id": "f028d505",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f61c4b11",
+   "id": "f9f22a17",
    "metadata": {},
    "outputs": [
     {
@@ -227,10 +227,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec6c7b5c",
+   "execution_count": 12,
+   "id": "9d8f5296",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normal traffic\n",
+      "normal traffic\n",
+      "fast heavy object\n",
+      "Whoa! Something is up with the data\n",
+      "slow light object, Ignore it\n"
+     ]
+    }
+   ],
    "source": [
     "mass = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
     "velocity = [10.0, 20.0, 30.0, 25.0, 20.0]\n",
@@ -238,15 +250,23 @@
     "i = 0\n",
     "\n",
     "for i in range(5):\n",
-    "    if mass[i] > 5 and velocity > 20:\n",
+    "    if mass[i] > 5 and velocity[i] > 20:\n",
     "        print(\"fast heavy object\")\n",
-    "    elif mass[i] > 2 and mass <= 5.0 and velocity <= 20:\n",
+    "    elif mass[i] > 2 and mass[i] <= 5.0 and velocity[i] <= 20:\n",
     "        print(\"normal traffic\")\n",
-    "    elif elif mass[i] < 2 and velocity <= 20:\n",
+    "    elif mass[i] < 2 and velocity[i] <= 20:\n",
     "        print(\"slow light object, Ignore it\")\n",
     "    else:\n",
-    "        print(Whoa! Something is up with the data\")"
+    "        print(\"Whoa! Something is up with the data\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "184f6a33",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
