--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "34da4fb9",
+   "id": "71ea5d82",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3f1d4d94",
+   "id": "1d9f00a7",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b499e483",
+   "id": "31b2a116",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ba6a5f9",
+   "id": "c4f9f9e6",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cb8043a5",
+   "id": "a4a6ce1f",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b171822c",
+   "id": "5823c126",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f028d505",
+   "id": "5fb53bb1",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f9f22a17",
+   "id": "3ba816e0",
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "9d8f5296",
+   "execution_count": 14,
+   "id": "bf053500",
    "metadata": {},
    "outputs": [
     {
@@ -239,15 +239,14 @@
       "normal traffic\n",
       "fast heavy object\n",
       "Whoa! Something is up with the data\n",
-      "slow light object, Ignore it\n"
+      "slow light object, Ignore it\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "mass = [3.54, 2.07, 9.22, 1.86, 1.71]\n",
     "velocity = [10.0, 20.0, 30.0, 25.0, 20.0]\n",
-    "\n",
-    "i = 0\n",
     "\n",
     "for i in range(5):\n",
     "    if mass[i] > 5 and velocity[i] > 20:\n",
@@ -257,13 +256,14 @@
     "    elif mass[i] < 2 and velocity[i] <= 20:\n",
     "        print(\"slow light object, Ignore it\")\n",
     "    else:\n",
-    "        print(\"Whoa! Something is up with the data\")"
+    "        print(\"Whoa! Something is up with the data\")\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "184f6a33",
+   "id": "c8f3a056",
    "metadata": {},
    "outputs": [],
    "source": []
