--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "71ea5d82",
+   "id": "4a7ef862",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1d9f00a7",
+   "id": "598e2f4e",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "31b2a116",
+   "id": "5774a7f7",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c4f9f9e6",
+   "id": "8bc0d61d",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a4a6ce1f",
+   "id": "e4d77df4",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5823c126",
+   "id": "b1b6035a",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5fb53bb1",
+   "id": "6760cbac",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3ba816e0",
+   "id": "1089aa13",
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "bf053500",
+   "execution_count": 15,
+   "id": "8a203293",
    "metadata": {},
    "outputs": [
     {
@@ -239,8 +239,7 @@
       "normal traffic\n",
       "fast heavy object\n",
       "Whoa! Something is up with the data\n",
-      "slow light object, Ignore it\n",
-      "4\n"
+      "slow light object, Ignore it\n"
      ]
     }
    ],
@@ -263,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8f3a056",
+   "id": "50640eb6",
    "metadata": {},
    "outputs": [],
    "source": []
