--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4a7ef862",
+   "id": "425927d0",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "598e2f4e",
+   "id": "e1bb45f5",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5774a7f7",
+   "id": "55eed6e5",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8bc0d61d",
+   "id": "cc3426f3",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e4d77df4",
+   "id": "be81fde4",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b1b6035a",
+   "id": "92bcd0fd",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6760cbac",
+   "id": "365ad5dd",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1089aa13",
+   "id": "a66b3805",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8a203293",
+   "id": "63b63e02",
    "metadata": {},
    "outputs": [
     {
@@ -261,11 +261,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "088100b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pressure = 71.9\n",
+    "if pressure > 50.0:\n",
+    "    pressure = 25.0\n",
+    "elif pressure <= 50.0:\n",
+    "    pressure = 0.0\n",
+    "print(pressure)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "50640eb6",
+   "id": "3c4ca6b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "original = [-1.5, 0.2, 0.4, 0.0, -1.3, 0.4]\n",
+    "result = ____\n",
+    "for value in original:\n",
+    "    if ____:\n",
+    "        result.append(0)\n",
+    "    else:\n",
+    "        ____\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
