--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ce13d181",
+   "id": "5c9b7304",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b5517007",
+   "id": "8d96ff52",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ac6b9872",
+   "id": "87c419b2",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d4f7aa0",
+   "id": "89f3412a",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f3343689",
+   "id": "260869cc",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "edf2093f",
+   "id": "1fd2a0e1",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f485d4f1",
+   "id": "14523fda",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "51a43f7b",
+   "id": "50282550",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "56f866a0",
+   "id": "6e6cb326",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c5e073c0",
+   "id": "58d73598",
    "metadata": {},
    "outputs": [
     {
@@ -284,25 +284,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "82f8125d",
+   "execution_count": 18,
+   "id": "9ed46e72",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'result' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m original:\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 5\u001b[0m         \u001b[43mresult\u001b[49m\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      7\u001b[0m         result\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'result' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 1, 0, 1]\n"
      ]
     }
    ],
    "source": [
     "original = [-1.5, 0.2, 0.4, 0.0, -1.3, 0.4]\n",
-    "#result = []\n",
+    "result = []\n",
     "for value in original:\n",
     "    if value < 0:\n",
     "        result.append(0)\n",
@@ -314,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da65aece",
+   "id": "fa99884e",
    "metadata": {},
    "outputs": [],
    "source": []
