--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19bd195a",
+   "id": "d2bfcd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "318b414c",
+   "id": "ab65283c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for filename in [\"data/gapminder_gdp_africa.csv\", ]"
+    "for filename in [\"data/gapminder_gdp_africa.csv\", \"data/gapminder_gdp_asia.csv\"]:\n",
+    "    data = pd.read_csv(filename, index_col = \"country\")\n",
+    "    print(filename, data.min())"
    ]
   }
  ],
