--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a9e5e6f",
+   "id": "9c72188a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a7c3d0ae",
+   "id": "689f97d0",
    "metadata": {},
    "outputs": [
     {
@@ -60,10 +60,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64c8fc87",
+   "id": "098f2f54",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import glob\n",
+    "List_of_files = glob.glob(\"data/*.csv\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
