--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9c72188a",
+   "id": "5d8cda93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "689f97d0",
+   "id": "0e455ef9",
    "metadata": {},
    "outputs": [
     {
@@ -59,14 +59,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "098f2f54",
+   "execution_count": 4,
+   "id": "f033565a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/gapminder_gdp_americas.csv\n",
+      "data/gapminder_gdp_europe.csv\n",
+      "data/gapminder_all.csv\n",
+      "data/gapminder_gdp_oceania.csv\n",
+      "data/gapminder_gdp_africa.csv\n",
+      "data/gapminder_gdp_asia.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "List_of_files = glob.glob(\"data/*.csv\")\n",
+    "\n",
+    "for File in List_of_files:\n",
+    "    print(File)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d59426b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filename in"
    ]
   }
  ],
